[package]
name = "taz-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
[workspace]
members = [
    "auramesh-core",
    "auramesh-cli",
    "auramesh-agents",
    "auramesh-mesh",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"