[workspace]
name = "taz-rust"
members = [
    "auramesh-core",
    "auramesh-cli",
    "auramesh-agents",
    "auramesh-mesh",
]

resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"
