[package]
name = "auramesh-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
auramesh-core = { path = "../auramesh-core" }
auramesh-agents = { path = "../auramesh-agents" }
auramesh-mesh = { path = "../auramesh-mesh" }
